--- a/SquadApplication/ViewCustom/EditEquipmentPage.xaml
+++ b/SquadApplication/ViewCustom/EditEquipmentPage.xaml
@@ -2,11 +2,75 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="SquadApplication.ViewCustom.EditEquipmentPage"
+             BackgroundImageSource="hkauthorize.jpg"
              Title="EditEquipmentPage">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+    <VerticalStackLayout Padding="10" Margin="10">
+            <Border>
+                   <HorizontalStackLayout Padding="10" Margin="10">
+                       <Label Text="MainWeapon" TextColor="AliceBlue" FontSize="20"/>
+                       <Switch x:Name="isEnabledWeaponMain" IsToggled="False"  Margin="110,-9,0,0"/>
+                   </HorizontalStackLayout>
+            </Border>
+        <Border>
+            <Entry                 
+                 Placeholder="Введите name weapon"
+                 PlaceholderColor="Gray">
+                <Entry.Triggers>
+                    <DataTrigger 
+                        TargetType="Entry"
+                        Binding="{Binding  
+                        Source={x:Reference isEnabledWeaponMain},
+                        Path=IsToggled}"
+                        Value="True"
+                        >
+                        <Setter Property="IsEnabled" Value="True"/>
+                    </DataTrigger>
+                </Entry.Triggers>
+            </Entry>            
+        </Border>
+        <Border>
+            <HorizontalStackLayout Padding="10" Margin="10">
+                <Label Text="MainWeapon" TextColor="AliceBlue" FontSize="20"/>
+                <Switch x:Name="isEnabledWeaponSecndary" IsToggled="False"  Margin="110,-9,0,0"/>
+            </HorizontalStackLayout>
+        </Border>
+        <Border>
+            <Entry                 
+                Placeholder="Введите name weapon"
+                PlaceholderColor="Gray">
+                <Entry.Triggers>
+                    <DataTrigger 
+                             TargetType="Entry"
+                             Binding="{Binding  
+                             Source={x:Reference isEnabledWeaponSecndary},
+                             Path=IsToggled}"
+                             Value="True"
+                             >
+                        <Setter Property="IsEnabled" Value="True"/>
+                    </DataTrigger>
+                </Entry.Triggers>
+            </Entry>
+        </Border>
+        <Border>
+            <VerticalStackLayout Padding="10">
+            <HorizontalStackLayout>
+                <Label Text="Head" TextColor="AliceBlue" FontSize="20"/>
+                    <Switch Margin="110,-9,0,0"/>
+            </HorizontalStackLayout>
+                <HorizontalStackLayout>
+                    <Label Text="Body" TextColor="AliceBlue" FontSize="20"/>
+                    <Switch Margin="110,-9,0,0"/>
+                </HorizontalStackLayout>
+                <HorizontalStackLayout>
+                    <Label Text="UnLoud" TextColor="AliceBlue" FontSize="20"/>
+                    <Switch Margin="110,-9,0,0" />
+                </HorizontalStackLayout>
+            </VerticalStackLayout>
+        </Border>
+        <Border>
+            <Button Text="Update"/>
+        </Border>
+
     </VerticalStackLayout>
+        
 </ContentPage>
